# LSql

./: .gitattributes  .gitignore  CMakeLists.txt
include/: connection.h  query.h  transaction.h  type.h
include/lsql/: column.h  connection.h  query.h  transaction.h  type.h  value.h
src/: column.cpp  connection.cpp  query.cpp  transaction.cpp  type.cpp  value.cpp
